--- a/ass16.html
+++ b/ass16.html
@@ -6,6 +6,16 @@
     <title>Assignment No-16</title>
 </head>
 <body>
+    <div class="container">
+        <div class="nav">
+            <nav>
+            <a class="content" href="home">Home</a>
+            <a href="about">About</a>
+            <a href="menu">Menu</a>
+            <a href="blog">Blog</a>
+            <a href="contact">Contact</a>
+            </nav>
+            </div>
     
 </body>
 </html>
