--- a/ass16.html
+++ b/ass16.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment No-16</title>
     <style>
-        
+            .container{
+    position:relative;
+    text-align:center;
+    color:white;
+}
+
     </style>
 </head>
 <body>
