css apply to nav class

--- a/ass16.html
+++ b/ass16.html
@@ -10,6 +10,22 @@
     text-align:center;
     color:white;
 }
+.nav{
+    background-color:#020202;
+    overflow:hidden;
+    position:sticky;
+    top:3px;
+}
+.nav a {
+float: left;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+justify-content: center;
+
+}
 
     </style>
 </head>
