--- a/ass16.html
+++ b/ass16.html
@@ -26,6 +26,10 @@ font-size: 17px;
 justify-content: center;
 
 }
+.nav a:hover{
+    background-color:#ddd;
+    color:black
+}
 
     </style>
 </head>
