--- a/ass16.html
+++ b/ass16.html
@@ -44,6 +44,9 @@ justify-content: center;
             <a href="contact">Contact</a>
             </nav>
             </div>
+
+            <input type="text" placeholder="Search......" class="btn"/>
+
     
 </body>
 </html>
