apply css to btn

--- a/ass16.html
+++ b/ass16.html
@@ -30,7 +30,23 @@ justify-content: center;
     background-color:#ddd;
     color:black
 }
+.btn{
+            color:#0000cc;
+            background-color:#ccf5ff;
+            margin:20px;
+            padding:10px;
+            border:none;
+            border:1px solid #0000cc;
+            border-radius:20px;
+            width:1100px;
+           text-align:center;
+           font-size:large;
+           position: sticky;
+           top:20px;
+           left:20px;
+           right:20px;
 
+        }
     </style>
 </head>
 <body>
