second button created

--- a/ass16.html
+++ b/ass16.html
@@ -63,6 +63,8 @@ justify-content: center;
 
             <input type="text" placeholder="Search......" class="btn"/>
 
-    
+            <div class="box">
+                <button class="button">Ice-cream</button>
+            </div>
 </body>
 </html>
