--- a/ass16.html
+++ b/ass16.html
@@ -47,6 +47,12 @@ justify-content: center;
            right:20px;
 
         }
+        .box{
+            border:1px solid tomato;
+            height:1000px ;
+            width:100%;
+            position:relative;
+        }
     </style>
 </head>
 <body>
