--- a/ass16.html
+++ b/ass16.html
@@ -62,6 +62,18 @@ justify-content: center;
             border-radius: 0 20px 0 20px;
 
         }
+        .cream_info{
+            font-size: 38px;
+            height:500px;
+            width:1000px;
+            position:relative;
+            left:100px;
+            text-align:left;
+            background-color: pink;
+            color: black;
+            
+
+        }
     </style>
 </head>
 <body>
