--- a/ass16.html
+++ b/ass16.html
@@ -49,7 +49,7 @@ justify-content: center;
         }
         .box{
             border:1px solid tomato;
-            height:1000px ;
+            height:550px ;
             width:100%;
             position:relative;
         }
@@ -73,6 +73,10 @@ justify-content: center;
             color: black;
             
 
+        }
+        body{
+            padding:0;
+            margin:0;
         }
     </style>
 </head>
