--- a/ass16.html
+++ b/ass16.html
@@ -31,52 +31,63 @@ justify-content: center;
     color:black
 }
 .btn{
-            color:#0000cc;
-            background-color:#ccf5ff;
-            margin:20px;
-            padding:10px;
+    color:#0000cc;
+    background-color:#ccf5ff;
+    margin:20px;
+    padding:10px;
+    border:none;
+    border:1px solid #0000cc;
+    border-radius:20px;
+    width:1100px;
+    text-align:center;
+    font-size:large;
+    position: sticky;
+    top:20px;
+    left:20px;
+    right:20px;
+
+}
+.box{
+    border:1px solid tomato;
+    height:550px ;
+    width:100%;
+    position:relative;
+}
+.button{
+    background-color: plum;
+    position:absolute;
+    top:-20px;
+    left:0px;
+    padding:10px;
+    border-radius: 0 20px 0 20px;
+
+}
+.cream_info{
+    font-size: 38px;
+    height:500px;
+    width:1000px;
+    position:relative;
+    left:100px;
+    text-align:left;
+    background-color: pink;
+    color: black;
+}
+body{
+    padding:0;
+    margin:0;
+}
+.btn1{
+            background-color: #e0ccff;
+            color:#6600ff;
             border:none;
-            border:1px solid #0000cc;
-            border-radius:20px;
-            width:1100px;
-           text-align:center;
-           font-size:large;
-           position: sticky;
-           top:20px;
-           left:20px;
-           right:20px;
-
-        }
-        .box{
-            border:1px solid tomato;
-            height:550px ;
-            width:100%;
-            position:relative;
-        }
-        .button{
-            background-color: plum;
-            position:absolute;
-            top:-20px;
-            left:0px;
-            padding:10px;
-            border-radius: 0 20px 0 20px;
-
-        }
-        .cream_info{
-            font-size: 38px;
-            height:500px;
-            width:1000px;
-            position:relative;
-            left:100px;
-            text-align:left;
-            background-color: pink;
-            color: black;
-            
-
-        }
-        body{
-            padding:0;
-            margin:0;
+            border:1px solid #6600ff;
+            padding:5px 20px;
+            border-radius: 20px;
+            margin:10px;
+            position: fixed;
+            bottom:10px;
+            right:10px;
+        
         }
     </style>
 </head>
